# factory-method-pattern

./: README.md  main.py  pyproject.toml
fish/: catfish.py  fish.py  perch.py
