[tool.poetry]
name = "factory-method-pattern"
version = "0.1.0"
description = ""
authors = ["Yevhen Dudka <yevhen.dudka@nixs.com>"]
readme = "README.md"
packages = [{include = "factory_method_pattern"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
